--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -42,13 +42,57 @@
                 android:drawablePadding="16dp"
                 android:layout_marginTop="35dp"
                 android:textSize="18dp"/>
+            <EditText
+                android:id="@+id/txt_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password baru"
+                android:background="@drawable/custom_stroke"
+                android:padding="10dp"
+                android:drawableLeft="@drawable/baseline_lock_24"
+                android:drawableTint="@color/colorMedium"
+                android:drawablePadding="16dp"
+                android:layout_marginTop="20dp"
+                android:textSize="18dp"
+                android:inputType="textPassword"/>
+            <EditText
+                android:id="@+id/password_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Ulangi Password"
+                android:background="@drawable/custom_stroke"
+                android:padding="10dp"
+                android:drawableLeft="@drawable/baseline_lock_24"
+                android:drawableTint="@color/colorMedium"
+                android:drawablePadding="16dp"
+                android:layout_marginTop="20dp"
+                android:textSize="18dp"
+                android:inputType="textPassword"/>
+            <!--<com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_marginTop="20dp"
+                app:startIconDrawable="@drawable/baseline_lock_24"
+                app:startIconTint="@color/colorMedium"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/colorMedium"
+                app:hintEnabled="false">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/custom_stroke"
+                    android:textSize="18dp"
+                    android:hint="Ulangi Password"
+                    android:inputType="textPassword"/>
+            </com.google.android.material.textfield.TextInputLayout>-->
             <Button
-                android:id="@+id/btn_check"
+                android:id="@+id/btn_reset"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:padding="15dp"
-                android:text="Verifikasi"
+                android:text="Reset Password"
                 android:textColor="@color/white"
                 android:textSize="18dp"
                 android:textStyle="bold"/>
