--- a/app/src/main/res/layout/activity_subject_detail.xml
+++ b/app/src/main/res/layout/activity_subject_detail.xml
@@ -194,7 +194,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 <!--                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -292,6 +292,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     app:cardElevation="5dp"
+                    android:layout_margin="4dp"
+                    app:cardCornerRadius="10dp">
+                </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nilai Rapor"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/colorMedium"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:cardElevation="5dp"
                     android:layout_margin="5dp"
                     app:cardCornerRadius="10dp">
                     <LinearLayout
@@ -320,11 +335,6 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nilai Akhir = (A + AS) / 2"
-                android:textSize="14dp"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
