--- a/app/src/main/res/layout/card_jadwal_details.xml
+++ b/app/src/main/res/layout/card_jadwal_details.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/cardSemester"
     android:gravity="center_horizontal"
-    android:background="@color/white_grey"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <androidx.cardview.widget.CardView
@@ -50,9 +49,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:text="07.00 - 09.00"
+                    android:textColorHint="@color/black"
+                    android:textStyle="bold"
                     android:textColor="@color/grey"
-                    android:textSize="13dp"/>
+                    android:textSize="14dp"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
