--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorDark">#00B0FF</color>
     <color name="grey">#808080</color>
     <color name="white_grey">#E8E8E8</color>
+    <color name="yellow">#F4E869</color>
 </resources>
